Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2976

QML Outline: Expand all/collapse all context menu option is missing

XMLWordPrintable

    • 32f69b9b7790a71f182e4676337f98b0c1f181b0

      This simple feature should be in the outline. For almost any QML files, it's difficult to get the overall image of contents because the outline takes so much vertical space by default.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kkohne Kai Köhne
            holmsted Lasse Holmstedt
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes