Outline: Add context menu for collapsing/expanding tree

Task-number: QTCREATORBUG-2976