src/plugins/qmljseditor/qmljsoutlinetreeview.h
@@ -11,6 +11,11 @@ class QmlJSOutlineTreeView : public Utils::NavigationTreeView
     Q_OBJECT
 public:
     explicit QmlJSOutlineTreeView(QWidget *parent = 0);
+
+    void contextMenuEvent(QContextMenuEvent *event);
+
+private slots:
+    void collapseAllExceptRoot();
 };
 
 } // namespace Internal
